--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
   library.addPatron(patron);
 
   patron.checkOut(book);
-  patron.returnBook(book);
+  library.chargeFines();
   console.log(patron);
-  console.log(book);
 
 
 
